Initial Adjusts waiting for css flex refactor

--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Codes4Mind</title>
-</head>
+    <title>Codes4Minds</title>
+    <link rel="stylesheet" href="assets/css/codes4minds.css">
+    </head>
 <body>
-    Web Development
+    <header>
+        <h1>Codes4mindS</h1>
+    </header>
+    <main>
+        <div class="content-wrapper">
+            <figure class="logo-container">
+                <img src="assets/images/codes4minds-logo.png" alt="Codes4Minds Logo">
+            </figure>
+            <p>
+                Web development over WWW standards
+            </p>
+        </div>
+    </main>
+    <footer>
+        <p>&copy; 2005 Codes4mindS</p>
+    </footer>
 </body>
 </html>
