Basis of the adatative body static site

--- a/index.html
+++ b/index.html
@@ -8,20 +8,24 @@
     </head>
 <body>
     <header>
-        <h1>Codes4mindS</h1>
+        <a href="https://codes4mind.github.io/codes4mind/" class="header-link">
+            <img class="header-logo" src="assets/images/logoc4m.svg" alt="Codes4Minds Logo">
+            <h1>Codes4mindS</h1>
+        </a>
     </header>
     <main>
         <div class="content-wrapper">
-            <figure class="logo-container">
-                <img src="assets/images/codes4minds-logo.png" alt="Codes4Minds Logo">
-            </figure>
             <p>
-                Web development over WWW standards
+                Web development on www standards
             </p>
         </div>
     </main>
     <footer>
-        <p>&copy; 2005 Codes4mindS</p>
+        <p>&copy; 2025 
+            <a href="https://codes4mind.github.io/codes4mind/">
+                Codes4mindS
+            </a>
+        </p>
     </footer>
 </body>
 </html>
