--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Codes4Minds</title>
-    <link rel="stylesheet" href="assets/css/codes4minds.css">
+    <link rel="stylesheet" href="assets/css/codes4mind.css">
     </head>
 <body>
     <header>
         <a href="https://codes4mind.github.io/codes4mind/" class="header-link">
             <img class="header-logo" src="assets/images/logoc4m.svg" alt="Codes4Minds Logo">
-            <h1>Codes4mindS</h1>
+            <h1>Codes4mind</h1>
         </a>
     </header>
     <main>
@@ -23,7 +23,7 @@
     <footer>
         <p>&copy; 2025 
             <a href="https://codes4mind.github.io/codes4mind/">
-                Codes4mindS
+                Codes4mind
             </a>
         </p>
     </footer>
